--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,12 +9,16 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
+  json_annotation: ^4.8.1
+  riverpod: ^2.3.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  json_serializable: ^6.7.0
+  build_runner: ^2.4.5
 flutter:
   uses-material-design: true
   assets:
-    - assets/
+    - assets/images/
