--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   json_annotation: ^4.8.1
   riverpod: ^2.3.6
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
