--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,10 @@ dependencies:
   json_annotation: ^4.8.1
   riverpod: ^2.3.6
   http: ^1.1.0
+  cached_network_image: ^3.2.3
+  path_provider: ^2.0.15
+  shimmer: ^3.0.0
+  
 
 dev_dependencies:
   flutter_test:
