--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   http: ^1.1.0
   cached_network_image: ^3.2.3
   shimmer: ^3.0.0
+  connectivity_plus: ^4.0.1
+  internet_connection_checker: ^1.0.0+1
 
 dev_dependencies:
   flutter_test:
