--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   shimmer: ^3.0.0
   connectivity_plus: ^4.0.1
   internet_connection_checker: ^1.0.0+1
+  flutter_riverpod: ^2.3.6
+  flutter_hooks: ^0.19.0
 
 dev_dependencies:
   flutter_test:
