--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
   internet_connection_checker: ^1.0.0+1
   flutter_riverpod: ^2.3.6
   flutter_hooks: ^0.19.0
+  device_info_plus: ^9.0.2
+  flutter_native_splash: ^2.3.1
+  
 
 dev_dependencies:
   flutter_test:
@@ -25,6 +28,11 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   json_serializable: ^6.7.0
   build_runner: ^2.4.5
+  flutter_launcher_icons: "^0.13.1"
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/app_icon.png"
 flutter:
   uses-material-design: true
   assets:
